Adiconando estilo ao links do cabeçalho

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
     border: 3px solid black;
     border-radius:50%;
     color:green;
+    font-size: 2rem;
 }
 
 .nome-cabecalho:hover{
@@ -18,3 +19,24 @@
     color:red;
     transition: 1.5s;
 }
+
+.links-cabecalho{
+    position: absolute;
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+    right: 10%;
+    bottom: 0;
+    gap: 14%;
+    margin: 0 50px 30px 50px;
+    word-wrap: normal;
+    text-decoration: none;
+    
+}
+.links-cabecalho a{
+    opacity: 5px;
+    color: rgb(133, 133, 133);
+    text-decoration: none;
+}
+
+
